wrote my second blog post

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <span>May, 30, 2022</span>
                 </div>
                 <h1 class="blog-post-title">My First Blog Post</h1>
-                <p class="blog-post-text">I have decided to document the journey of a student who wants to become a software developer. This blog will hold nothing back. I will explain the hardships and failures as well as the great things that keep us coming back to the world of software development. I hope this blog will help someone else new to programming and give you an idea of what to expect when you start this journey. <span>GOOD LUCK, HAPPY CODING</span> </p>
-                <a href="#" class="read-more">Read More</a>
+                <p class="blog-post-text">I have decided to document the journey of a student who wants to become a software developer. This blog will hold nothing back. I will explain the hardships and failures as well as the great things that keep us coming back to the world of software development. I hope this blog will help someone else new to programming and give you an idea of what to expect when you start this journey. <span>GOOD LUCK, HAPPY CODING!!!</span> </p>
+                
             </div>
         </div>
         <div class="blog-post">
@@ -34,9 +34,9 @@
                     <span>Kenneth Quiggins</span>
                     <span>May, 30, 2022</span>
                 </div>
-                <h1 class="blog-post-title">My First Blog Post</h1>
-                <p class="blog-post-text">I have decided to document the journey of a student who wants to become a software developer. This blog will hold nothing back. I will explain the hardships and failures as well as the great things that keep us coming back to the world of software development. I hope this blog will help someone else new to programming and give you an idea of what to expect when you start this journey. <span>GOOD LUCK, HAPPY CODING</span> </p>
-                <a href="#" class="read-more">Read More</a>
+                <h1 class="blog-post-title">Problems with different screen sizes.</h1>
+                <p class="blog-post-text">I have ran into my first problem to write about, hence the reason for starting this blog. I am having trouble with my media queries for different screen sizes, the top of my page is getting cut off and the picture is not changing sizes to fit the screen. I am going to do some research online and will document how I end up fixing the problem.</p>
+                
             </div>
         </div>
     </div>
