heroku deployment errors blog post

--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
                     <p class="blog-post-text">I have been working with flask a lot lately and added a few new features like an Admin section, Rich text editor, profile picture, I ran into a little problem with the image uploading part I did what the flask documentation said to do and watched some tutorials but still get a permission denied error which seems like a file permission error due to windows settings I will have to due some more research. I also started a bootstrap project which is going really well so far.</p>
                 </div>
             </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="tech blog">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
+                        <span>June, 5, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Deployed on Heroku</h1>
+                    
+                    <p class="blog-post-text">I decided to deploy my app on heroku. When you do that you can not use sqlite or MySQL as a database, so I went with postgres, everything went smooth until it was time use the heroku python terminal and actually set up the database for the tables I created. I keep getting an error, so I will do some research and document how I end up fixing the error.</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
