--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
                     <p class="blog-post-text">I decided to deploy my app on heroku. When you do that you can not use sqlite or MySQL as a database, so I went with postgres, everything went smooth until it was time use the heroku python terminal and actually set up the database for the tables I created. I keep getting an error, so I will do some research and document how I end up fixing the error.</p>
                 </div>
             </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="tech blog">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
+                        <span>June, 5, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Found Solution</h1>
+                    
+                    <p class="blog-post-text">I was able to get my database up and working properly not without some frustrations. When using SQLALCHEMY 1.4 the database URI has to have postgresql:// instead of postgres://, which is what the heroku command line gives you to use when you type the command in to get the path to the database, so that is very frustrating. I had to sign in to heroku in browser destroy the database and go through the process again except when I copy and pasted the path into my app.py file I just changed the beginning of the path to postgresql://, not very complicated just some research and a lot of patience, guess that come with the territory of software development.</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
