--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@
                     <p class="blog-post-text">I ran into an issue when trying to push my changes to heroku's remote repository for my flask app. I fixed the user profile link to display "Hello [current user]!!" when you click the link on the navbar, I then tried to push the changes to heroku and received an error saying the remote repo does not exist which is weird because I have pushed changes from this computer many times without issue. With a little research was able to find a solution by using this command heroku git:remote -a example-app. So overall it was a success and a learning experience but does not explain why it keeps losing the repo from time to time.</p>
                 </div>
             </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="tech blog">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
+                        <span>June, 5, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Next Steps</h1>
+                    
+                    <p class="blog-post-text">My next steps in learning is to learn how to handle interview questions on problem solving which deals with algorithms and data structures which will be a challenge but I am ready for the challenge and going to try to focus on learning unit testing and test driven development I know it is a lot to learn and I am going to try and not over due myself and if I learn one new thing a day that is a win in my book.</p>
+                </div>
+            </div>
+            
         </div>
     </body>
 </html>
