leet code problems blog post

--- a/index.html
+++ b/index.html
@@ -173,6 +173,20 @@
                     <p class="blog-post-text">My next steps in learning is to learn how to handle interview questions on problem solving which deals with algorithms and data structures which will be a challenge but I am ready for the challenge and going to try to focus on learning unit testing and test driven development I know it is a lot to learn and I am going to try and not over due myself and if I learn one new thing a day that is a win in my book.</p>
                 </div>
             </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="tech blog">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
+                        <span>June, 12, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Algorithms and Data Structures</h1>
+                    
+                    <p class="blog-post-text">I am trying to solve some interview questions for jobs in software development and some of them are very intimidating but not impossible. The problem I have with this is I am going to college to be able to get a job in this field and they are not teaching me any of this which is very frustrating. I will get there I know.</p>
+                </div>
+            </div>
             
         </div>
     </body>
