--- a/index.html
+++ b/index.html
@@ -187,6 +187,20 @@
                     <p class="blog-post-text">I am trying to solve some interview questions for jobs in software development and some of them are very intimidating but not impossible. The problem I have with this is I am going to college to be able to get a job in this field and they are not teaching me any of this which is very frustrating. I will get there I know.</p>
                 </div>
             </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="tech blog">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
+                        <span>June, 12, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">feeling stuck</h1>
+                    
+                    <p class="blog-post-text">I am feeling a little stuck as what to focus on next and my learning. I guess being 44 going back to college I feel like I need to push myself more than normal and learn everything I can as fast as possible. I have a year left of school then I have to get a job if I am not at the point I am hirable by then I will probably be stuck getting a job in a field I will be miserable in, so I pray everyday I will make it because I love to code and everything about the tech field. Here's Hoping!!!!</p>
+                </div>
+            </div>
             
         </div>
     </body>
