code clean up blog post

--- a/index.html
+++ b/index.html
@@ -215,6 +215,20 @@
                     <p class="blog-post-text">I hae done a few more things to my app like added a profile picture to the actual blog post and now the admin can delete and edit anyone's post. Now I have also decided to work on making the look of the app more professional, things like the home page not being so plain with nothing on it etc., so if someone happens to come across my app online it will look more user friendly than it does now. I know the learning I take away from building the app is more important than looks but I also take pride in what I do so some minor improvements I think is important also.</p>
                 </div>
             </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="tech blog">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
+                        <span>June, 19, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">cleaning up my code</h1>
+                    
+                    <p class="blog-post-text">I have been talking to my mentor and she has suggested cleaning up my code some, which I think is a great idea. I really did not know where to start when it was first suggested so she has given me some good ideas to get this started. To start with I am going to put my User and Post classes in a separate file and then move my error functions in their own file after that I will see how my code looks and try to see some other things I can do to clean it up some more.</p>
+                </div>
+            </div>
             
         </div>
     </body>
