blueprints progress blog post

--- a/index.html
+++ b/index.html
@@ -9,8 +9,23 @@
     <title>Ken's Code</title>
 </head>
     <body>
+        
         <div class="container">
             <h2>Blog Post</h2>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
+                        <span>June, 24, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">flask blueprints progress</h1>
+                    <p class="blog-post-text">I have found out that what I am experiencing with my flask app and separating my code is called circular import where you have objects that need to be global and rely on other objects so when you split your code up you split up objects that rely on other objects so you get a kind of dead lock. I am going to research some more and figure out the best way to accomplish this. I am not comfortable with blueprints to try on my app thats in production yet so, I will probably clone it and try that way so I don't do any damage I can not fix. </p>
+                    
+                </div>
+            </div>
             <div class="blog-post">
                 <div class="blog-post-img">
                     <img src="images/tech_blog.jpg" alt="">
