finally working blog post

--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
     <title>Ken's Code</title>
 </head>
     <body>
-        
         <div class="container">
             <h2>Blog Post</h2>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
+                        <span>June, 26, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Finally Separated the App</h1>
+                    <p class="blog-post-text">So I met with Carol today and after a week of me struggling to get my database models and other parts of my code in a separate folder and file, she was able to walk me through it and get my app up and running. I learned a lot from this even though it was her that got it running for me I understand a lot more about how my app is running and how to achieve this next time I need to do this, so it was a win all around.</p>
+                    
+                </div>
+            </div>
             <div class="blog-post">
                 <div class="blog-post-img">
                     <img src="images/tech_blog.jpg" alt="">
