problem solving skills blog post

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>June, 28, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Problem Solving Skills</h1>
+                    <p class="blog-post-text">I took the advice of my mentor Carol and started doing the practice problems Underdog Devs have for people who go through the Cohorts program. I created a git repo that way I can keep track of my learning. I also have been trying out this new website that teaches you some of the more advanced git commands, I feel these are all important skills to have to be a developer.</p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>June, 26, 2022</span>
                     </div>
                     <h1 class="blog-post-title">Finally Separated the App</h1>
