portfolio progress blog post

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>June, 30, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Portfolio Progress</h1>
+                    <p class="blog-post-text">I decided to take a look at my portfolio site I was working on again I had stopped for awhile because I ran into issues and was unable to fix them so I took a break. I was able to fix these issues I was having with my photos by putting a height inline attribute but then ran into a strange git problem where the name of my file is not the same name on github after I pushed the code. So my picture is not showing on github pages at the moment. Although this should not be very difficult to fix I thought it would be worth documenting due to it being a odd problem. </p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>June, 28, 2022</span>
                     </div>
                     <h1 class="blog-post-title">Problem Solving Skills</h1>
