HackerRank & PracticeProblems blog post

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>July, 2, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Practice problems & HackerRank</h1>
+                    <p class="blog-post-text">I have been going through the practice problems for underdog devs and the 30 days of code from HackerRank over the last week I really think this will be a good thing for me going back to the fundamentals  and reinforcing problem solving and logical thinking skills. I also have both in a github repo just as a way of showing what I know and my dedication to coding.</p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>June, 30, 2022</span>
                     </div>
                     <h1 class="blog-post-title">Portfolio Progress</h1>
