coding in front of someone blog post

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>July, 4, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Coding in front of someone</h1>
+                    <p class="blog-post-text">I leaned yesterday that coding in front of someone can be a little intimidating. I was going over some HackerRank problems with Carol and just completely drew a blank and it really made me feel stupid but it also opened my eyes to the fact I need to work on that because I am used to coding by myself but in the real world I will have to be with a team of programmers. Life lessons are great!</p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>July, 2, 2022</span>
                     </div>
                     <h1 class="blog-post-title">Practice problems & HackerRank</h1>
