weekly update blog post

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>July, 8, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Weekly Update</h1>
+                    <p class="blog-post-text">I have been working on solving HackerRank and underdog devs practice problems lately and I can definitely see that it has helped my problem solving skills and helped me find better and more efficient ways of coding problems because HackerRank will not accept the answer if your code is not optimized.</p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>July, 4, 2022</span>
                     </div>
                     <h1 class="blog-post-title">Coding in front of someone</h1>
