Docker build blog post

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>July, 9, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Accomplishment</h1>
+                    <p class="blog-post-text">I have been reading this book on Django and Docker for professionals and it is a little older so you have to debug a lot because some of the versions do not work well with newer versions of python and newer libraries. I was able to debug an issue with connecting my Postgresql database with Django because Psycopg2-binary version in the book does't work with python 3.10.4, so I feel super accomplished building my first docker image with Postgreql and Django, my skills are growing everyday.</p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>July, 8, 2022</span>
                     </div>
                     <h1 class="blog-post-title">Weekly Update</h1>
