django-allauth blog post

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>July, 13, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Django + Docker</h1>
+                    <p class="blog-post-text">The Django project I have been working on using docker has really been a fun learning experience for me. I added django-allauth to my project to handle all the logging in and out which I think is awesome because that is something you do not want to mess up and can easily turn into to a security issue. If there is one thing I take very seriously is cybersecurity and have always had a passion for web development and a secure internet.</p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>July, 12, 2022</span>
                     </div>
                     <h1 class="blog-post-title">wsl 2 & ubuntu</h1>
