--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>July, 15, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Django Bookstore App</h1>
+                    <p class="blog-post-text">I decided to learn how to use uuid to obfuscate the book id in the url of the bookstore app. It was actually a lot simpler than I imagined it would be. The only problem I ran into was I already had three books with data persisted in my database with id's instead of uuid's. So I just removed the old migrations and my PostgreSQL volume mount that still had old data and started migrations over. If this had been something other than a local development of my own I would have looked for another way to handle this and not destroyed customer data.</p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>July, 13, 2022</span>
                     </div>
                     <h1 class="blog-post-title">Django + Docker</h1>
