port error blog post

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>July, 18, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Django Port Error</h1>
+                    <p class="blog-post-text">I had stopped my containers from running so that I could go meet Carol for our meeting after I came back and tried to start them up I kept getting an error saying something was already bound to the port. I ran netstat after making sure nothing else was running on my system and kept seeing a weird service connecting on localhost digging deeper into the problem I finally found that an extensions called portainer from docker I installed was connected on the port Django was set to in my docker-compose file. This was not an easy find I am glad I know how to use my terminal to troubleshoot problems like this.</p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>July, 15, 2022</span>
                     </div>
                     <h1 class="blog-post-title">Django Bookstore App</h1>
