deployed with heroku blog post

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>July, 19, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">Deployed with Heroku</h1>
+                    <p class="blog-post-text">I was able to deploy my Django app as a docker container with Heroku. This was a one of the most complicated thing I have done in software development. There are still a lot of things that need to be done to the app, things I never realized you need to think of when deploying an app. Things like image uploads and sending emails all these things have to setup and a lot of the times with third party apps and integrated into your app. So I will do some research on these topics and try to get them working in my local environment before I push it to production.</p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>July, 18, 2022</span>
                     </div>
                     <h1 class="blog-post-title">Django Port Error</h1>
