--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 <div class="blog-post-info">
                     <div class="blog-post-date">
                         <span>Kenneth Quiggins</span>
+                        <span>July, 22, 2022</span>
+                    </div>
+                    <h1 class="blog-post-title">New Blog with Hugo</h1>
+                    <p class="blog-post-text">I have been working on a new and improved blog with Hugo because this one is becoming one big long file which is not ideal. This is still a work in progress I am very new to the JAMstack and Hugo. So far I have used a template for a basic outline of the site and used GitHub actions to run checks then deploy the site if all checks pass. I have learned about creating a branch for a specific feature, issue or whatever you are working on and then merging into main also having branching protection to avoid merging code with bugs in it.</p>
+                    
+                </div>
+            </div>
+            <div class="blog-post">
+                <div class="blog-post-img">
+                    <img src="images/tech_blog.jpg" alt="">
+                </div>
+                <div class="blog-post-info">
+                    <div class="blog-post-date">
+                        <span>Kenneth Quiggins</span>
                         <span>July, 19, 2022</span>
                     </div>
                     <h1 class="blog-post-title">Deployed with Heroku</h1>
